# sound-control-popup

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: audio.rs  controller.rs  main.rs  style.rs  ui.rs
